# blackbox-cli-test-framework

./: .env.example  .gitignore  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml
docs/: adr-001-blackbox-execution-model.md  architecture.md  usage.md
examples/: spec.yml
frontend/: index.html
frontend/src/: main.jsx  styles.css
src/blackbox_framework/: __init__.py  assertions.py  cli.py  config.py  reports.py  runner.py  specs.py  summary.py
tests/: test_assertions.py  test_runner.py  test_summary.py
