[project]
name = "blackbox-cli-test-framework"
version = "0.1.0"
description = "Production-ready blackbox CLI testing framework"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[project.scripts]
blackbox = "blackbox_framework.cli:app"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
